WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137150
REGRESSION(
r173929
): Web inspector doesn't work after
r173929
when INSPECTOR_SERVER is enabled
https://bugs.webkit.org/show_bug.cgi?id=137150
Summary
REGRESSION(r173929): Web inspector doesn't work after r173929 when INSPECTOR_...
Carlos Garcia Campos
Reported
2014-09-26 10:31:46 PDT
The inspector doesn't show anything because it's sending messages to a remote frontend that it's not running.
Attachments
Patch
(3.34 KB, patch)
2014-09-26 10:35 PDT
,
Carlos Garcia Campos
timothy
: review+
timothy
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2014-09-26 10:35:59 PDT
Created
attachment 238725
[details]
Patch
Timothy Hatcher
Comment 2
2014-09-26 10:39:23 PDT
Comment on
attachment 238725
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=238725&action=review
> Source/WebKit2/WebProcess/WebPage/WebInspector.cpp:67 > + , m_remoteFrontendConnected(false)
This should get a ENABLE(INSPECTOR_SERVER) guard.
> Source/WebKit2/WebProcess/WebPage/WebInspector.cpp:224 > #if !ENABLE(INSPECTOR_SERVER) > m_frontendConnection->send(Messages::WebInspectorUI::SendMessageToFrontend(message), 0); > #else > - WebProcess::shared().parentProcessConnection()->send(Messages::WebInspectorProxy::SendMessageToRemoteFrontend(message), m_page->pageID()); > + if (m_remoteFrontendConnected) > + WebProcess::shared().parentProcessConnection()->send(Messages::WebInspectorProxy::SendMessageToRemoteFrontend(message), m_page->pageID()); > + else > + m_frontendConnection->send(Messages::WebInspectorUI::SendMessageToFrontend(message), 0); > #endif
This can be simplified as: #if ENABLE(INSPECTOR_SERVER) if (m_remoteFrontendConnected) WebProcess::shared().parentProcessConnection()->send(Messages::WebInspectorProxy::SendMessageToRemoteFrontend(message), m_page->pageID()); else #endif m_frontendConnection->send(Messages::WebInspectorUI::SendMessageToFrontend(message), 0);
> Source/WebKit2/WebProcess/WebPage/WebInspector.h:107 > + bool m_remoteFrontendConnected;
This should also get a ENABLE(INSPECTOR_SERVER) guard.
Carlos Garcia Campos
Comment 3
2014-09-26 10:42:27 PDT
(In reply to
comment #2
)
> (From update of
attachment 238725
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=238725&action=review
> > > Source/WebKit2/WebProcess/WebPage/WebInspector.cpp:67 > > + , m_remoteFrontendConnected(false) > > This should get a ENABLE(INSPECTOR_SERVER) guard.
Right, it's only used and needed inside ENABLE(INSPECTOR_SERVER) blocks.
> > Source/WebKit2/WebProcess/WebPage/WebInspector.cpp:224 > > #if !ENABLE(INSPECTOR_SERVER) > > m_frontendConnection->send(Messages::WebInspectorUI::SendMessageToFrontend(message), 0); > > #else > > - WebProcess::shared().parentProcessConnection()->send(Messages::WebInspectorProxy::SendMessageToRemoteFrontend(message), m_page->pageID()); > > + if (m_remoteFrontendConnected) > > + WebProcess::shared().parentProcessConnection()->send(Messages::WebInspectorProxy::SendMessageToRemoteFrontend(message), m_page->pageID()); > > + else > > + m_frontendConnection->send(Messages::WebInspectorUI::SendMessageToFrontend(message), 0); > > #endif > > This can be simplified as: > > #if ENABLE(INSPECTOR_SERVER) > if (m_remoteFrontendConnected) > WebProcess::shared().parentProcessConnection()->send(Messages::WebInspectorProxy::SendMessageToRemoteFrontend(message), m_page->pageID()); > else > #endif > m_frontendConnection->send(Messages::WebInspectorUI::SendMessageToFrontend(message), 0);
Ok.
> > Source/WebKit2/WebProcess/WebPage/WebInspector.h:107 > > + bool m_remoteFrontendConnected; > > This should also get a ENABLE(INSPECTOR_SERVER) guard.
Carlos Garcia Campos
Comment 4
2014-09-26 10:50:32 PDT
Committed
r174013
: <
http://trac.webkit.org/changeset/174013
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug