REGRESSION(r173929): Web inspector doesn't work after r173929 when INSPECTOR_SERVER is enabled https://bugs.webkit.org/show_bug.cgi?id=137150

Reviewed by Timothy Hatcher.

The inspector doesn't show any information about the inspected
page because it's sending messages to a remote frontend that is
not running.

* WebProcess/WebPage/WebInspector.cpp:
(WebKit::WebInspector::WebInspector): Initialize m_remoteFrontendConnected.
(WebKit::WebInspector::sendMessageToFrontend): Send
SendMessageToRemoteFrontend message to the UI process when remote
frontend is connected, or SendMessageToFrontend message to
WebInspectorUI otherwise.
(WebKit::WebInspector::remoteFrontendConnected): Set m_remoteFrontendConnected to true.
(WebKit::WebInspector::remoteFrontendDisconnected): Set m_remoteFrontendConnected to false.
* WebProcess/WebPage/WebInspector.h:

Canonical link: https://commits.webkit.org/154963@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174013 268f45cc-cd09-0410-ab3c-d52691b4dbfc